@@ -16,35 +16,82 @@
 package ghidra.framework.protocol.ghidra;
 
 import java.io.File;
+import java.io.UnsupportedEncodingException;
 import java.net.*;
 import java.util.Objects;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.commons.lang3.StringUtils;
 
-import ghidra.framework.model.ProjectLocator;
+import ghidra.framework.client.RepositoryServerAdapter;
+import ghidra.framework.model.*;
 import ghidra.framework.remote.GhidraServerHandle;
+import ghidra.util.NamingUtilities;
 
 /**
- * Supported URL forms include:
+ * Utility class which provides support for creating Ghidra local project and remote repository
+ * URLs.  Valid Ghidra URL forms include:
  * <ul>
- * <li>{@literal ghidra://<host>:<port>/<repository-name>[/<folder-path>]/[<folderItemName>[#ref]]}</li>
+ * <li>{@literal ghidra:[ext:]//<host>:<port>/<repository-name>[/<folder-path>]/[<folderItemName>[#ref]]}</li>
  * <li>{@literal ghidra:/[X:/]<project-path>/<project-name>[?[/<folder-path>]/[<folderItemName>[#ref]]]}</li>
+ * <li>{@literal ghidra:////UNCServer/UNCshare/<project-name>[?[/<folder-path>]/[<folderItemName>[#ref]]]}</li>
  * </ul>
+ * <p>
+ * NOTE: [ext:] corresponds to an optional Ghidra server extension protocol if supported.  
+ * This requires a corresponding {@link GhidraProtocolHandler} extension.  Helper methods within
+ * this utility are not provided for forming such URLs.  A separate GhidraExtURL utility 
+ * should be established if such a protocol extension is established or used.  It is assumed that
+ * any such extension utilizing a compliant hierarchical URL which appears as an opaque URI element
+ * within the Ghidra URL.
+ * <p>
+ * Various system path utilities are also provided in support of local Ghidra project URLs and
+ * {@link ProjectLocator}. 
  */
 public class GhidraURL {
 
-	// TODO: URL encoding/decoding should be used
-
 	public static final String PROTOCOL = "ghidra";
 
-	private static final String PROTOCOL_URL_START = PROTOCOL + ":/";
+	private static final String PROTOCOL_URL_START = PROTOCOL + ":";
 
-	private static Pattern IS_REMOTE_URL_PATTERN =
-		Pattern.compile("^" + PROTOCOL_URL_START + "/[^/].*"); // e.g., ghidra://path
-
+	/**
+	 * A pattern that matches when the URL path is on the local file system.
+	 * <P>
+	 * Pattern: 
+	 * 	
+	 * 		^ghidra:(/[^/]|////)(?![/]).*
+	 * 
+	 * Explanation:
+	 * 
+	 * 		^ghidra:		- starts with 'ghidra:'
+	 * 		(/|////)    	- match a single slash or 4 slashes
+	 * 		(?![/])			- with no following slashes
+	 *      .*				- any other text
+	 * 				
+	 * Examples:
+	 * 	
+	 * 		ghidra:/path		- matches
+	 * 		ghidra:////path		- matches
+	 * 		ghidra://path		- does not match
+	 */
 	private static Pattern IS_LOCAL_URL_PATTERN =
-		Pattern.compile("^" + PROTOCOL_URL_START + "[^/].*"); // e.g., ghidra:/path
+		Pattern.compile("^" + PROTOCOL + ":(/|////)(?![/]).*"); // e.g., ghidra:/path or ghidra:////path
+
+	private static Pattern STARTS_WITH_TWO_FORWARD_SLASHES_PATTERN =
+		Pattern.compile("^//(?![/]).*");
+
+	/**
+	 * A pattern which matches a Windows path specification with a drive letter, optional '/' prefix
+	 * and optional trailing path.
+	 * e.g., /C:, C:, /C:/path, C:/path
+	 */
+	private static Pattern WINDOWS_DRIVE_PATH_PATTERN = Pattern.compile("^[/]{0,1}[A-Za-z]:(/.*)?");
+
+	/**
+	 * A pattern that matches a UNC path which include a server and share name.
+	 * e.g., //server/share/a/b
+	 */
+	private static Pattern UNC_PATH_PATTERN = Pattern.compile("^//(?![/]).+/(?![/]).+");
 
 	public static final String MARKER_FILE_EXTENSION = ".gpr";
 	public static final String PROJECT_DIRECTORY_EXTENSION = ".rep";
@@ -55,7 +102,8 @@ public class GhidraURL {
 	/**
 	 * Determine if the specified URL refers to a local project and
 	 * it exists.
-	 * @param url ghidra URL
+	 * 
+	 * @param url Ghidra URL
 	 * @return true if specified URL refers to a local project and
 	 * it exists.
 	 */
@@ -65,17 +113,19 @@ public class GhidraURL {
 	}
 
 	/**
-	 * Determine if the specified string appears to be a possible ghidra URL
-	 * (starts with "ghidra:/"). 
+	 * Determine if the specified string appears to be a possible Ghidra URL
+	 * (starts with "ghidra:").
+	 *  
 	 * @param str string to be checked
-	 * @return true if string is possible ghidra URL
+	 * @return true if string is possible Ghidra URL
 	 */
 	public static boolean isGhidraURL(String str) {
 		return str != null && str.startsWith(PROTOCOL_URL_START);
 	}
 
 	/**
-	 * Tests if the given url is using the Ghidra protocol
+	 * Tests if the given url is using the Ghidra protocol.
+	 * 
 	 * @param url the url to test
 	 * @return true if the url is using the Ghidra protocol
 	 */
@@ -84,65 +134,80 @@ public class GhidraURL {
 	}
 
 	/**
-	 * Determine if URL string uses a local format (e.g., {@code ghidra:/path...}).
+	 * Determine if URL string uses a local Ghidra project URL format (e.g., {@code ghidra:/path...}).
 	 * Extensive validation is not performed.  This method is intended to differentiate
 	 * from a server URL only.
+	 * 
 	 * @param str URL string
 	 * @return true if string appears to be local Ghidra URL, else false
 	 */
-	public static boolean isLocalGhidraURL(String str) {
+	public static boolean isLocalURL(String str) {
 		return IS_LOCAL_URL_PATTERN.matcher(str).matches();
 	}
 
 	/**
-	 * Determine if URL string uses a remote server format (e.g., {@code ghidra://host...}).
+	 * Determine if URL string uses a local Ghidra project URL format (e.g., {@code ghidra:/path...}).
 	 * Extensive validation is not performed.  This method is intended to differentiate
-	 * from a local URL only.
+	 * from a server URL only.
+	 * 
+	 * @param url URL
+	 * @return true if specified URL refers to a local Ghidra project (ghidra:/path/projectName...)
+	 */
+	public static boolean isLocalURL(URL url) {
+		return isLocalURL(url.toExternalForm());
+	}
+
+	/**
+	 * Determine if a URL string corresponds to a remote Ghidra server URL 
+	 * (e.g., {@code ghidra://host...}, {@code ghidra:<extension>://host...}). 
+	 * Extensive validation is not performed.  This method is intended to differentiate between a 
+	 * local and remote Ghidra URL only.
+	 * 
 	 * @param str URL string
 	 * @return true if string appears to be remote server Ghidra URL, else false
 	 */
 	public static boolean isServerURL(String str) {
-		return IS_REMOTE_URL_PATTERN.matcher(str).matches();
+		return isGhidraURL(str) && !isLocalURL(str);
 	}
 
 	/**
-	 * Determine if the specified URL is a local project URL.
-	 * No checking is performed as to the existence of the project.
-	 * @param url ghidra URL
-	 * @return true if specified URL refers to a local 
-	 * project (ghidra:/path/projectName...)
+	 * Determine if the specified path is only valid on a Windows platform.  Such paths contain
+	 * either a drive specification or UNC path (e.g., C:\, /C:/, //server/..., \\server\..).
+	 * NOTE: This does not check for existence of the specified path.
+	 * 
+	 * @param path file path specification
+	 * @return true if path is only valid when used on a Windows system.
 	 */
-	public static boolean isLocalProjectURL(URL url) {
-		return isLocalGhidraURL(url.toExternalForm());
+	public static boolean isWindowsOnlyPath(String path) {
+		String normalizedPath = path.replace('\\', '/');
+		return WINDOWS_DRIVE_PATH_PATTERN.matcher(normalizedPath).matches() ||
+			UNC_PATH_PATTERN.matcher(normalizedPath).matches();
 	}
 
 	/**
 	 * Get the project locator which corresponds to the specified local project URL.
-	 * Confirm local project URL with {@link #isLocalProjectURL(URL)} prior to method use.
+	 * Confirm local project URL with {@link #isLocalURL(URL)} prior to method use.
+	 * 
 	 * @param localProjectURL local Ghidra project URL
 	 * @return project locator or null if invalid path specified
 	 * @throws IllegalArgumentException URL is not a valid 
-	 * {@link #isLocalProjectURL(URL) local project URL}.
+	 * {@link #isLocalURL(URL) local project URL}.
 	 */
 	public static ProjectLocator getProjectStorageLocator(URL localProjectURL) {
-		if (!isLocalProjectURL(localProjectURL)) {
+		if (!isLocalURL(localProjectURL)) {
 			throw new IllegalArgumentException("Invalid local Ghidra project URL");
 		}
 
-		String path = localProjectURL.getPath(); // assume path always starts with '/'
+		URI uri = URI.create(localProjectURL.toExternalForm());
 
-//		if (path.indexOf(":/") == 2 && Character.isLetter(path.charAt(1))) { // check for drive letter after leading '/'
-//			if (Platform.CURRENT_PLATFORM.getOperatingSystem() == OperatingSystem.WINDOWS) {
-//				path = path.substring(1); // Strip-off leading '/'
-//			}
-//			else {
-//				// assume drive letter separator ':' should be removed for non-windows
-//				path = path.substring(0, 2) + path.substring(3);
-//			}
-//		}
-
+		String path = uri.getPath();
 		int index = path.lastIndexOf('/');
 		String dirPath = index != 0 ? path.substring(0, index) : "/";
+
+		if (dirPath.startsWith("////")) {
+			// Prune UNC path as it appears in URL
+			dirPath = dirPath.substring(2);
+		}
 
 		String name = path.substring(index + 1);
 		if (name.length() == 0) {
@@ -153,41 +218,127 @@ public class GhidraURL {
 	}
 
 	/**
-	 * Get the shared repository name associated with a repository URL or null
-	 * if not applicable.  For ghidra URL extensions it is assumed that the first path element
-	 * corresponds to the repository name.
-	 * @param url ghidra URL for shared project resource
-	 * @return repository name or null if not applicable to URL
+	 * {@return the URL-decoded project content path contained within the query portion of
+	 * a local Ghidra URL.  The root folder will be returned if no path was specified.}
+	 * 
+	 * @param uri GhidraURL in URI form.
+	 * @throws URISyntaxException if a URI interpretation/parse fails
 	 */
-	public static String getRepositoryName(URL url) {
-		if (!isServerRepositoryURL(url)) {
-			return null;
+	private static String getLocalProjectContentPath(URI uri) throws URISyntaxException {
+		String path = uri.getQuery();
+		if (path == null) {
+			return "/";
 		}
-		String path = url.getPath();
 		if (!path.startsWith("/")) {
-			// handle possible ghidra protocol extension use which is assumed to encode
-			// repository and file path the same as standard ghidra URL.
-			try {
-				URL extensionURL = new URL(path);
-				path = extensionURL.getPath();
-			}
-			catch (MalformedURLException e) {
-				path = "";
-			}
-		}
-		path = path.substring(1);
-		int ix = path.indexOf("/");
-		if (ix > 0) {
-			path = path.substring(0, ix);
+			throw new URISyntaxException(uri.toString(),
+				"Missing absolute project content path");
 		}
 		return path;
 	}
 
 	/**
+	 * {@return the URL-decoded path contained within the specified URI.}
+	 * NOTE: This will include the repository name included within the path.
+	 * 
+	 * @param uri GhidraURL in URI form.
+	 * @throws URISyntaxException if a URI interpretation/parse fails
+	 */
+	private static String getServerURIPath(URI uri) throws URISyntaxException {
+		String path = null;
+		if (uri.isOpaque()) {
+			// handle possible ghidra protocol extension use which is assumed to encode
+			// repository and file path the same as standard Ghidra URL.
+			String subPart = uri.getSchemeSpecificPart();
+			if (StringUtils.isBlank(subPart)) {
+				throw new URISyntaxException(uri.toString(), "Invalid Ghidra URL");
+			}
+			path = URI.create(subPart).getPath();
+		}
+		else if (uri.getAuthority() != null) {
+			path = uri.getPath();
+		}
+		if (StringUtils.isBlank(path)) {
+			throw new URISyntaxException(uri.toString(),
+				"Invalid ghidra repository URL - repository not specified");
+		}
+		return path;
+	}
+
+	/**
+	 * {@return Get the URL-decoded reference/fragment from the URL or null}
+	 * <p>
+	 * NOTE: The presence of "+" in the original reference fragment is problematic and
+	 * requires consistent use of this method in conjunction with the URL instantiation
+	 * methods provided by this utility class.
+	 * 
+	 * @param url Ghidra URL
+	 */
+	public static String getDecodedReference(URL url) {
+		String ref = url.getRef();
+		if (StringUtils.isBlank(ref)) {
+			return null;
+		}
+		try {
+			// NOTE: original "+" may appear encoded in final URL as "%252B"
+			ref = URLDecoder.decode(ref, "UTF-8");
+			ref = ref.replace("%2B", "+"); // force double-decode of original "+"
+			return ref;
+		}
+		catch (UnsupportedEncodingException e) {
+			return null;
+		}
+	}
+
+	/**
+	 * Perform preliminary encode of '+' within raw ref string so that it may be preserved
+	 * and properly decoded from {@link URI#getFragment()} by {@link #getDecodedReference(URL)}.
+	 * Once fully encoded by URI a raw '+' will appear with a double encoding of "%252B".
+	 * 
+	 * @param rawRef raw ref/fragment to be prepared for use with URI creation.
+	 * @return preliminary encoding of specified raw ref string.
+	 */
+	private static String encodeRefPlus(String rawRef) {
+		return StringUtils.isBlank(rawRef) ? null : rawRef.replace("+", "%2B");
+	}
+
+	/**
+	 * Get the shared repository name associated with a repository URL or null
+	 * if not applicable.  For Ghidra URL extensions it is assumed that the first path element
+	 * corresponds to the repository name.
+	 * 
+	 * @param url Ghidra URL for shared project resource
+	 * @return repository name or null if not applicable to URL
+	 */
+	public static String getRepositoryName(URL url) {
+		if (!isServerURL(url)) {
+			return null;
+		}
+
+		try {
+			URI uri = url.toURI();
+			String path = getServerURIPath(uri);
+			if (path.length() < 2 || path.charAt(0) != '/' || path.charAt(1) == '/') {
+				return null;
+			}
+			path = path.substring(1);
+			int ix = path.indexOf("/");
+			if (ix > 0) {
+				path = path.substring(0, ix);
+			}
+			return path;
+		}
+		catch (URISyntaxException e) {
+			return null;
+		}
+	}
+
+	/**
 	 * Determine if the specified URL is any type of server "repository" URL.
 	 * No checking is performed as to the existence of the server or repository.
+	 * <p>
 	 * NOTE: ghidra protocol extensions are not currently supported (e.g., ghidra:http://...).
-	 * @param url ghidra URL
+	 * 
+	 * @param url Ghidra URL
 	 * @return true if specified URL refers to a Ghidra server 
 	 * repository (ghidra://host/repositoryNAME/path...)
 	 */
@@ -195,31 +346,25 @@ public class GhidraURL {
 		if (!isServerURL(url)) {
 			return false;
 		}
-		String path = url.getPath();
-		if (StringUtils.isBlank(path)) {
+		try {
+			URI uri = url.toURI();
+			String path = getServerURIPath(uri);
+			return path.charAt(0) == '/' && path.length() > 1 && path.charAt(1) != '/';
+		}
+		catch (URISyntaxException e) {
 			return false;
 		}
-		if (!path.startsWith("/")) {
-			try {
-				URL extensionURL = new URL(path);
-				path = extensionURL.getPath();
-				if (StringUtils.isBlank(path)) {
-					return false;
-				}
-			}
-			catch (MalformedURLException e) {
-				return false;
-			}
-		}
-		return path.charAt(0) == '/' && path.length() > 1 && path.charAt(1) != '/';
 	}
 
 	/**
 	 * Determine if the specified URL is any type of supported server Ghidra URL.
-	 * No checking is performed as to the existence of the server or repository.
-	 * @param url ghidra URL
+	 * If a Ghidra server extension URL is specified the corresponding {@link GhidraProtocolHandler}
+	 * extension must be present or false will be returned.
+	 * 
+	 * @param url Ghidra URL
 	 * @return true if specified URL refers to a Ghidra server 
-	 * repository (ghidra://host/repositoryNAME/path...)
+	 * repository (e.g., {@code ghidra://host/repositoryNAME/path...}, 
+	 * {@code ghidra:<extension>://host/repositoryNAME/path...})
 	 */
 	public static boolean isServerURL(URL url) {
 		if (!PROTOCOL.equals(url.getProtocol())) {
@@ -229,89 +374,99 @@ public class GhidraURL {
 	}
 
 	/**
-	 * Ensure that absolute path is specified and normalize its format.
-	 * An absolute path may start with a windows drive letter (e.g., c:/a/b, /c:/a/b)
-	 * or without (e.g., /a/b).  Although for Windows the lack of a drive letter is
-	 * not absolute, for consistency with Linux we permit this form which on
-	 * Windows will use the default drive for the process. If path starts with a drive 
-	 * letter (e.g., "c:/") it will have a "/" prepended (e.g., "/c:/", both forms
-	 * are treated the same by the {@link File} class under Windows).
-	 * @param path path to be checked and possibly modified.
+	 * Ensure that absolute path is specified and normalize its format (e.g., Windows path
+	 * separators are converted to '/').  An absolute path may start with a windows drive 
+	 * letter (e.g., c:\a\b, c:/a/b, /c:/a/b) or without (e.g., /a/b) or a UNC path 
+	 * (e.g., //server/share/a/b, \\server\share\a\b).  
+	 * <p>
+	 * For Windows, the lack of a drive letter is not absolute; although, for consistency with 
+	 * Linux we permit this form which on Windows will use the default drive for the process. 
+	 * If path starts with a drive letter (e.g., "c:/") it will have a "/" prepended 
+	 * (e.g., "/c:/", both forms are treated the same by the {@link File} class under Windows).
+	 * <p>
+	 * Path element naming restrictions are imposed based upon 
+	 * {@link NamingUtilities#checkName(String, String)} restrictions.  These restrictions
+	 * are imposed to ensure we can easily express the local project path in URL form.
+	 * 
+	 * @param absolutePath path to be checked and possibly modified.
+	 * @param isDirectory true if returned path should include a trailing '/'
 	 * @return path to be used
-	 * @throws IllegalArgumentException if an invalid path is specified
+	 * @throws IllegalArgumentException if an invalid path is specified based upon 
+	 * {@link NamingUtilities} restrictions.
 	 */
-	private static String checkAbsolutePath(String path) {
-		int scanIndex = 0;
-		path = path.replace('\\', '/');
-		int len = path.length();
-		if (!path.startsWith("/")) {
-			// Allow paths to start with windows drive letter (e.g., c:/a/b)
-			if (len >= 3 && hasAbsoluteDriveLetter(path, 0)) {
+	public static String checkLocalAbsolutePath(String absolutePath, boolean isDirectory) {
+
+		String path = absolutePath.replace('\\', '/');
+
+		Matcher matcher = UNC_PATH_PATTERN.matcher(path);
+		if (matcher.matches()) {
+			// Handle UNC path
+			checkValidProjectPath(path, 2);
+			if (isDirectory && !path.endsWith("/")) {
+				path += "/";
+			}
+			return path;
+		}
+		else if (path.startsWith("//")) {
+			throw new IllegalArgumentException("Invalid UNC path: " + absolutePath);
+		}
+
+		int scanIndex = 1; // char position after '/' (assumed - checked below)
+
+		if (WINDOWS_DRIVE_PATH_PATTERN.matcher(path).matches()) {
+			if (!path.startsWith("/")) {
 				path = "/" + path;
 			}
-			else {
-				throw new IllegalArgumentException("Absolute project path required");
+			if (path.length() == 3) { // e.g., '/C:'
+				path += '/'; // add trailing '/' immediately after ':' (directory)
 			}
-			scanIndex = 3;
+			scanIndex = 4; // char position after '/C:/'
 		}
-		else if (len >= 3 && hasDriveLetter(path, 1)) {
-			if (len < 4 || path.charAt(3) != '/') {
-				// path such as "/c:" not permitted
-				throw new IllegalArgumentException("Absolute project path required");
-			}
-			scanIndex = 4;
+		else if (!path.startsWith("/")) {
+			throw new IllegalArgumentException("Absolute path required");
 		}
-		checkInvalidChar("path", path, scanIndex);
+
+		checkValidProjectPath(path, scanIndex);
+
+		if (isDirectory && !path.endsWith("/")) {
+			path += "/";
+		}
 		return path;
 	}
 
-	private static boolean hasDriveLetter(String path, int index) {
-		return Character.isLetter(path.charAt(index++)) && path.charAt(index) == ':';
-	}
-
-	private static boolean hasAbsoluteDriveLetter(String path, int index) {
-		int pathIndex = index + 2;
-		return path.length() > pathIndex && hasDriveLetter(path, index) &&
-			path.charAt(pathIndex) == '/';
-	}
-
 	/**
-	 * Check for characters explicitly disallowed in path or project name.
-	 * @param type type of string to include in exception
-	 * @param str string to check
-	 * @param startIndex index at which to start checking
-	 * @throws IllegalArgumentException if str contains invalid character
+	 * Check for valid project path. See {@link NamingUtilities#checkName(String, String)}).
+	 * 
+	 * @param path project path to check (using '/' path separator).
+	 * @param startIndex index at which to start checking immediately after root path separator
+	 * @throws IllegalArgumentException if path contains invalid character
 	 */
-	private static void checkInvalidChar(String type, String str, int startIndex) {
-		for (int i = startIndex; i < str.length(); i++) {
-			char c = str.charAt(i);
-			if (ProjectLocator.DISALLOWED_CHARS.contains(c)) {
-				throw new IllegalArgumentException(
-					type + " contains invalid character: '" + c + "'");
+	private static void checkValidProjectPath(String path, int startIndex) {
+		String str = path.substring(startIndex);
+		if (str.length() != 0) {
+			for (String s : str.split("/")) {
+				NamingUtilities.checkName(s, null);
 			}
 		}
 	}
 
 	/**
-	 * Create a Ghidra URL from a string form of Ghidra URL or local project path.
+	 * Create a Ghidra URL from a string form of a Ghidra URL or local project path.
 	 * This method can consume strings produced by the getDisplayString method.
+	 * 
 	 * @param projectPathOrURL {@literal project path (<absolute-directory>/<project-name>)} or 
 	 * string form of Ghidra URL.
 	 * @return local Ghidra project URL
-	 * @see #getDisplayString(URL)
 	 * @throws IllegalArgumentException invalid path or URL specified
 	 */
 	public static URL toURL(String projectPathOrURL) {
-		if (!projectPathOrURL.startsWith(PROTOCOL + ":")) {
+		if (!isGhidraURL(projectPathOrURL)) {
 			if (projectPathOrURL.endsWith(ProjectLocator.PROJECT_DIR_SUFFIX) ||
 				projectPathOrURL.endsWith(ProjectLocator.PROJECT_FILE_SUFFIX)) {
 				String ext = projectPathOrURL.substring(projectPathOrURL.lastIndexOf('.'));
 				throw new IllegalArgumentException("Project path must omit extension: " + ext);
 			}
-			if (projectPathOrURL.contains("?") || projectPathOrURL.contains("#")) {
-				throw new IllegalArgumentException("Unsupported query/ref used with project path");
-			}
-			projectPathOrURL = checkAbsolutePath(projectPathOrURL);
+			projectPathOrURL = checkLocalAbsolutePath(projectPathOrURL, false);
 			int minSplitIndex = projectPathOrURL.charAt(2) == ':' ? 3 : 0;
 			int splitIndex = projectPathOrURL.lastIndexOf('/');
 			if (splitIndex < minSplitIndex || projectPathOrURL.length() == (splitIndex + 1)) {
@@ -322,130 +477,141 @@ public class GhidraURL {
 			String projectName = projectPathOrURL.substring(splitIndex);
 			return makeURL(location, projectName);
 		}
+
+		// NOTE: We must assume URL is properly encoded in its external form
 		try {
-			return new URL(projectPathOrURL);
+			return URI.create(projectPathOrURL).toURL();
 		}
-		catch (MalformedURLException e) {
-			throw new IllegalArgumentException(e);
+		catch (Exception e) {
+			throw new IllegalArgumentException("Invalid Ghidra URL", e);
 		}
+	}
+
+	/**
+	 * Create a new URL which is resolved from a base Ghidra project or repository URL to which 
+	 * the specified content folder or file path is added along with the optional reference.
+	 *            
+	 * @param ghidraUrl the base Ghidra project or repository URL which will be used as the basis
+	 *            for forming a new Ghidra URL.            
+	 * @param projectFilePath an absolute folder or file path within the project (e.g., /a/b/c, 
+	 *            may be null for root folder).  Folder paths should end with a '/' character.
+	 * @param ref optional location reference (may be null) which is appended to URL with a '#' 
+	 *            delimiter.
+	 * @return new resolved URL
+	 * @throws IllegalArgumentException if an invalid Ghidra project or repository URL is specified
+	 *            or an invalid folder/file path is specified.
+	 */
+	public static URL resolve(URL ghidraUrl, String projectFilePath, String ref) {
+		
+		if (!StringUtils.isBlank(projectFilePath)) {
+			if (!projectFilePath.startsWith("/") || projectFilePath.contains("\\")) {
+				throw new IllegalArgumentException("Absolute path required using '/' delimiter");
+			}
+			checkValidProjectPath(projectFilePath, 1);
+		}
+		else {
+			projectFilePath = null;
+		}
+
+		ref = encodeRefPlus(ref);
+		
+		Exception exc = null;
+		try {
+			URI uri = ghidraUrl.toURI();
+
+			if (isLocalURL(ghidraUrl)) {
+				String systemProjectPath = forceLocalUNCPathIfNeeded(uri.getPath()); // Preserve UNC path if needed
+				return new URI(PROTOCOL, null, systemProjectPath, projectFilePath, ref).toURL();
+			}
+
+			String repoName = getRepositoryName(ghidraUrl);
+			if (repoName != null) {
+
+				String path = "/" + repoName;
+				if (projectFilePath != null) {
+					path += projectFilePath;
+				}
+
+				if (uri.isOpaque()) {
+					// handle possible ghidra protocol extension use which is assumed to encode
+					// repository and file path the same as standard Ghidra URL.
+					String subPart = uri.getSchemeSpecificPart();
+					if (StringUtils.isBlank(subPart)) {
+						throw new URISyntaxException(ghidraUrl.toExternalForm(),
+							"Invalid Ghidra URL");
+					}
+					URI extURI = URI.create(subPart);
+					URI revisedExtURI = extURI.resolve(path);
+					return new URI(PROTOCOL, revisedExtURI.toURL().toExternalForm(),
+						ref).toURL();
+				}
+
+				// Resolve normal Ghidra server URL
+				uri = uri.resolve(path);
+				if (ref != null) {
+					uri = uri.resolve("#" + ref);
+				}
+				return uri.toURL();
+			}
+		}
+		catch (URISyntaxException | MalformedURLException e) {
+			exc = e;
+		}
+		throw new IllegalArgumentException("Invalid project/repository URL: " + ghidraUrl, exc);
 	}
 
 	/**
 	 * Get Ghidra URL which corresponds to the local-project or repository with any 
 	 * file path or query details removed.
+	 * 
 	 * @param ghidraUrl ghidra file/folder URL (server-only URL not permitted)
 	 * @return local-project or repository URL
 	 * @throws IllegalArgumentException if URL does not specify the {@code ghidra} protocol
 	 * or does not properly identify a remote repository or local project.
 	 */
 	public static URL getProjectURL(URL ghidraUrl) {
-		if (!PROTOCOL.equals(ghidraUrl.getProtocol())) {
-			throw new IllegalArgumentException("ghidra protocol required");
-		}
-
-		if (isLocalProjectURL(ghidraUrl)) {
-			String urlStr = ghidraUrl.toExternalForm();
-			int queryIx = urlStr.indexOf('?');
-			if (queryIx < 0) {
-				return ghidraUrl;
-			}
-			urlStr = urlStr.substring(0, queryIx);
-			try {
-				return new URL(urlStr);
-			}
-			catch (MalformedURLException e) {
-				throw new RuntimeException(e); // unexpected
-			}
-		}
-
-		if (isServerRepositoryURL(ghidraUrl)) {
-
-			String path = ghidraUrl.getPath();
-			// handle possible ghidra protocol extension use which is assumed to encode
-			// repository and file path the same as standard ghidra URL.
-			if (!path.startsWith("/")) {
-				try {
-					URL extensionURL = new URL(path);
-					path = extensionURL.getPath();
-				}
-				catch (MalformedURLException e) {
-					path = "/";
-				}
-			}
-
-			// Truncate ghidra URL
-			String urlStr = ghidraUrl.toExternalForm();
-
-			String tail = null;
-			int ix = path.indexOf('/', 1);
-			if (ix > 0) {
-				// identify path tail to be removed
-				tail = path.substring(ix);
-			}
-
-			int refIx = urlStr.indexOf('#');
-			if (refIx > 0) {
-				urlStr = urlStr.substring(0, refIx);
-			}
-			int queryIx = urlStr.indexOf('?');
-			if (queryIx > 0) {
-				urlStr = urlStr.substring(0, queryIx);
-			}
-
-			if (tail != null) {
-				urlStr = urlStr.substring(0, urlStr.lastIndexOf(tail));
-			}
-			try {
-				return new URL(urlStr);
-			}
-			catch (MalformedURLException e) {
-				// ignore
-			}
-		}
-
-		throw new IllegalArgumentException("Invalid project/repository URL: " + ghidraUrl);
+		return resolve(ghidraUrl, null, null);
 	}
 
 	/**
-	 * Get the project pathname referenced by the specified Ghidra file/folder URL.
+	 * Get the decoded project content pathname referenced by the specified Ghidra file/folder URL.
 	 * If path is missing root folder is returned.
-	 * @param ghidraUrl ghidra file/folder URL (server-only URL not permitted)
+	 * <p>
+	 * NOTE: This project content pathname should not be confused with a local project storage 
+	 * path associated with a {@link ProjectLocator} or local project Ghidra URL.
+	 * 
+	 * @param ghidraUrl Ghidra local or remote file/folder URL (server-only URL not permitted)
 	 * @return pathname of file or folder
 	 */
 	public static String getProjectPathname(URL ghidraUrl) {
 
-		if (isLocalProjectURL(ghidraUrl)) {
-			String query = ghidraUrl.getQuery();
-			return StringUtils.isBlank(query) ? "/" : query;
-		}
+		try {
+			URI uri = ghidraUrl.toURI();
 
-		if (isServerRepositoryURL(ghidraUrl)) {
-			String path = ghidraUrl.getPath();
-			// handle possible ghidra protocol extension use
-			if (!path.startsWith("/")) {
-				try {
-					URL extensionURL = new URL(path);
-					path = extensionURL.getPath();
-				}
-				catch (MalformedURLException e) {
-					path = "/";
-				}
+			if (isLocalURL(ghidraUrl)) {
+				return getLocalProjectContentPath(uri);
 			}
-			// skip repo name (first path element)
-			int ix = path.indexOf('/', 1);
-			if (ix > 1) {
-				return path.substring(ix);
-			}
-			return "/";
-		}
 
-		throw new IllegalArgumentException("Not a project/repository URL");
+			if (isServerURL(ghidraUrl)) {
+				String path = getServerURIPath(uri); // URL-decoded path
+
+				// skip repo name (first path element)
+				int ix = path.indexOf('/', 1);
+				if (ix > 1) {
+					return path.substring(ix);
+				}
+				return "/";
+			}
+		}
+		catch (URISyntaxException e) {
+			// ignore
+		}
+		throw new IllegalArgumentException("Invalid project/repository URL");
 	}
 
 	/**
-	 * Get hostname as an IP address if possible
-	 * @param host hostname
-	 * @return host IP address or original host name
+	 * {@return host name as an IP address if possible, otherwise supplied host string is returned}
+	 * @param host host name
 	 */
 	private static String getHostAsIpAddress(String host) {
 		if (!StringUtils.isBlank(host)) {
@@ -460,96 +626,127 @@ public class GhidraURL {
 		return host;
 	}
 
+	private static String forceLocalUNCPathIfNeeded(String path) {
+		if (path.startsWith("//") && path.length() > 3 && path.charAt(2) != '/') {
+			path = "//" + path;
+		}
+		return path;
+	}
+
 	/**
-	 * Force the specified URL to specify a folder.  This may be neccessary when only folders
+	 * Force the specified URL to specify a folder.  This may be necessary when only folders
 	 * are supported since Ghidra permits both a folder and file to have the same name within
 	 * its parent folder.  This method simply ensures that the URL path ends with a {@code /} 
 	 * character if needed.
-	 * @param ghidraUrl ghidra URL
+	 * 
+	 * @param ghidraUrl Ghidra URL
 	 * @return ghidra folder URL
-	 * @throws IllegalArgumentException if specified URL is niether a 
+	 * @throws IllegalArgumentException if specified URL is neither a 
 	 * {@link #isServerRepositoryURL(URL) valid remote server URL}
-	 * or {@link #isLocalProjectURL(URL) local project URL}.
+	 * or {@link #isLocalURL(URL) local project URL}.
 	 */
 	public static URL getFolderURL(URL ghidraUrl) {
-
-		if (!GhidraURL.isServerRepositoryURL(ghidraUrl) &&
-			!GhidraURL.isLocalProjectURL(ghidraUrl)) {
-			throw new IllegalArgumentException("Invalid Ghidra URL: " + ghidraUrl);
+		String folderPath = getProjectPathname(ghidraUrl);
+		if (!folderPath.endsWith("/")) {
+			folderPath += "/";
 		}
-
-		URL repoURL = GhidraURL.getProjectURL(ghidraUrl);
-		String path = GhidraURL.getProjectPathname(ghidraUrl);
-
-		path = path.trim();
-		if (!path.endsWith("/")) {
-
-			// force explicit folder path
-			path += "/";
-
-			try {
-				if (GhidraURL.isServerRepositoryURL(ghidraUrl)) {
-					ghidraUrl = new URL(repoURL + path);
-				}
-				else {
-					ghidraUrl = new URL(repoURL + "?" + path);
-				}
-			}
-			catch (MalformedURLException e) {
-				throw new AssertionError(e);
-			}
-		}
-		return ghidraUrl;
+		return resolve(ghidraUrl, folderPath, getDecodedReference(ghidraUrl));
 	}
 
 	/**
 	 * Get a normalized URL which eliminates use of host names and optional URL ref
 	 * which may prevent direct comparison.
-	 * @param url ghidra URL
+	 * 
+	 * @param url Ghidra URL
 	 * @return normalized url
 	 */
 	public static URL getNormalizedURL(URL url) {
-		String host = url.getHost();
-		String revisedHost = getHostAsIpAddress(host);
-		if (Objects.equals(host, revisedHost) && url.getRef() == null) {
-			return url; // no change
+
+		if (!isGhidraURL(url)) {
+			throw new IllegalArgumentException("Ghidra URL required");
 		}
-		String file = url.getPath();
-		String query = url.getQuery();
-		if (!StringUtils.isBlank(query)) {
-			file += "?" + query;
-		}
+
 		try {
-			return new URL(PROTOCOL, revisedHost, url.getPort(), file);
+			URI uri = url.toURI();
+
+			if (isLocalURL(url)) {
+				return new URI(PROTOCOL, null, uri.getPath(), uri.getQuery(), null).toURL();
+			}
+
+			if (uri.isOpaque()) {
+				// Hierarchical URL is assumed for ghidra protocol extensions
+				String subPart = uri.getSchemeSpecificPart();
+				if (StringUtils.isBlank(subPart)) {
+					throw new URISyntaxException(url.toExternalForm(), "Invalid Ghidra URL");
+				}
+				URI extUri = URI.create(subPart);
+				String host = extUri.getHost();
+				String revisedHost = getHostAsIpAddress(host);
+				if (Objects.equals(host, revisedHost) && url.getRef() == null) {
+					return url; // no change
+				}
+				extUri = new URI(extUri.getScheme(), extUri.getUserInfo(), revisedHost,
+					extUri.getPort(), extUri.getPath(), extUri.getQuery(), null);
+				String ssp = extUri.toURL().toExternalForm();
+				return new URI(PROTOCOL, ssp, null).toURL();
+			}
+
+			String host = uri.getHost();
+			String revisedHost = getHostAsIpAddress(host);
+			if (Objects.equals(host, revisedHost) && url.getRef() == null) {
+				return url; // no change
+			}
+			// NOTE: Ghidra server does not support query so we strip it
+			return new URI(uri.getScheme(), uri.getUserInfo(), revisedHost, uri.getPort(),
+				uri.getPath(), null, null).toURL();
 		}
-		catch (MalformedURLException e) {
-			throw new RuntimeException(e);
+		catch (Exception e) {
+			throw new IllegalArgumentException("Invalid Ghidra URL", e);
 		}
 	}
 
 	/**
 	 * Generate preferred display string for Ghidra URLs.
-	 * Form can be parsed by the toURL method.
-	 * @param url ghidra URL
+	 * <p>
+	 * NOTE: The display-friendly string returned is intended for display use only and should not be 
+	 * parsed back into a URL.
+	 * 
+	 * @param url Ghidra URL
 	 * @return formatted URL display string
 	 * @see #toURL(String)
 	 */
 	public static String getDisplayString(URL url) {
-		if (isLocalProjectURL(url) && StringUtils.isBlank(url.getQuery()) &&
-			StringUtils.isBlank(url.getRef())) {
-			String path = url.getPath();
-			if (path.indexOf(":/") == 2 && Character.isLetter(path.charAt(1))) {
-				// assume windows path
-				path = path.substring(1);
-				path = path.replace('/', '\\');
+
+		try {
+			if (isLocalURL(url) && StringUtils.isBlank(url.getQuery()) &&
+				StringUtils.isBlank(url.getRef())) {
+
+				URI uri = url.toURI();
+				String path = uri.getPath();
+				if (path.indexOf(":/") == 2 && Character.isLetter(path.charAt(1))) {
+					// assume windows path
+					path = path.substring(1);
+					path = path.replace('/', '\\');
+				}
+				return path;
 			}
-			return path;
+		}
+		catch (URISyntaxException e) {
+			// ignore
 		}
 		return url.toString();
 	}
 
 	/**
-	 * Create a URL which refers to a local Ghidra project
+	 * Create a URL which refers to a local Ghidra project's root folder.
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain the referenced root {@link DomainFolder}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param dirPath absolute path of project location directory 
 	 * @param projectName name of project
 	 * @return local Ghidra project URL
@@ -559,9 +756,17 @@ public class GhidraURL {
 	}
 
 	/**
-	 * Create a URL which refers to a local Ghidra project
+	 * Create a URL which refers to a local Ghidra project's root folder.
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain the referenced root {@link DomainFolder}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param projectLocator absolute project location 
-	 * @return local Ghidra project URL
+	 * @return local Ghidra project root folder URL
 	 * @throws IllegalArgumentException if {@code projectLocator} does not have an absolute location
 	 */
 	public static URL makeURL(ProjectLocator projectLocator) {
@@ -570,200 +775,248 @@ public class GhidraURL {
 
 	/**
 	 * Create a URL which refers to a local Ghidra project with optional project folder/file path
-	 * and optional reference
+	 * and optional reference.
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain either the referenced {@link DomainFolder} or {@link DomainFile}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param projectLocation absolute path of project location directory 
 	 * @param projectName name of project
-	 * @param projectFilePath an absolute folder or file path within the project (e.g., /a/b/c, may be null)
+	 * @param projectFilePath an absolute folder or file path within the project (e.g., /a/b/c, 
+	 *            may be null for root folder).  Folder paths should end with a '/' character.
 	 * @param ref optional location reference (may be null) which is appended to URL with a '#' 
-	 * delimiter.
+	 *            delimiter.
 	 * @return local Ghidra project URL
 	 * @throws IllegalArgumentException if an absolute projectLocation path is not specified
 	 */
 	public static URL makeURL(String projectLocation, String projectName, String projectFilePath,
 			String ref) {
+
+		// NOTE: name and path element lengths are not restricted
+
 		if (StringUtils.isBlank(projectLocation) || StringUtils.isBlank(projectName)) {
 			throw new IllegalArgumentException("Invalid project location and/or name");
 		}
-		String path = checkAbsolutePath(projectLocation);
-		if (!path.endsWith("/")) {
-			path += "/";
-		}
-		StringBuilder buf = new StringBuilder(PROTOCOL);
-		buf.append(":");
-		buf.append(path);
-		buf.append(projectName);
+		NamingUtilities.checkName(projectName, "Project name");
+
+		String path = checkLocalAbsolutePath(projectLocation, true);
+		path = checkUncPathForURL(path);
+		path += projectName;
 
 		if (!StringUtils.isBlank(projectFilePath)) {
 			if (!projectFilePath.startsWith("/") || projectFilePath.contains("\\")) {
 				throw new IllegalArgumentException("Absolute path required using '/' delimiter");
 			}
-			buf.append("?");
-			buf.append(projectFilePath);
+			checkValidProjectPath(projectFilePath, 1);
 		}
-		if (!StringUtils.isBlank(ref)) {
-			buf.append("#");
-			buf.append(ref);
+		else {
+			projectFilePath = null;
 		}
+
 		try {
-			return new URL(buf.toString());
+			return new URI(GhidraURL.PROTOCOL, null, path, projectFilePath, encodeRefPlus(ref))
+					.toURL();
 		}
-		catch (MalformedURLException e) {
-			throw new IllegalArgumentException(e);
+		catch (URISyntaxException | MalformedURLException e) {
+			throw new IllegalArgumentException("Unable to form local project URL", e);
 		}
+	}
+
+	/**
+	 * Adjust a UNC path starting with exactly 2 forward slashes when used to form a URL.  
+	 * This handles the case where the user has typed a UNC path (e.g., \\server\share).  
+	 * We already converted backslashes to forward slashes, so we look for the converted path 
+	 * here (e.g., //server/share).  If we find this case, we update the path to use 4 slashes, 
+	 * which is used in the formation of a local Ghidra URL. 
+	 * 
+	 * @param path the path to check and adjust
+	 * @return the potentially updated path
+	 */
+	private static String checkUncPathForURL(String path) {
+		Matcher matcher = STARTS_WITH_TWO_FORWARD_SLASHES_PATTERN.matcher(path);
+		if (matcher.matches()) {
+			return "//" + path;
+		}
+		return path;
 	}
 
 	/**
 	 * Create a URL which refers to a Ghidra project with optional project file and ref.
 	 * If project locator corresponds to a transient project a server URL form will be returned.
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain either the referenced {@link DomainFolder} or {@link DomainFile}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param projectLocator project locator (local or transient)
-	 * @param projectFilePath file path (e.g., /a/b/c, may be null)
+	 * @param projectFilePath file path (e.g., /a/b/c, may be null).  Folder paths should 
+	 *            end with a '/' character.
 	 * @param ref location reference (may be null)
 	 * @return local Ghidra project URL
 	 * @throws IllegalArgumentException if invalid {@code projectFilePath} specified or if URL 
-	 * instantion fails.
+	 *            instantiation fails.
 	 */
 	public static URL makeURL(ProjectLocator projectLocator, String projectFilePath, String ref) {
-
-		if (projectLocator.isTransient()) {
-
-			// Transient project corresponds to server-based repository
-			String serverUrl = projectLocator.getURL().toExternalForm();
-			if (projectFilePath != null) {
-				if (!projectFilePath.startsWith("/")) {
-					throw new IllegalArgumentException(
-						"Absolute path required using '/' delimiter");
-				}
-				serverUrl += projectFilePath;
-			}
-			if (ref != null) {
-				serverUrl += "#";
-				serverUrl += ref;
-			}
-			try {
-				return new URL(serverUrl);
-			}
-			catch (MalformedURLException e) {
-				throw new IllegalArgumentException(e);
-			}
-		}
-
-		// Handle local project case
-		return makeURL(projectLocator.getLocation(), projectLocator.getName(), projectFilePath,
-			ref);
-	}
-
-	private static String[] splitOffName(String path) {
-		String name = "";
-		if (!StringUtils.isBlank(path) && !path.endsWith("/")) {
-			int index = path.lastIndexOf('/');
-			if (index >= 0) {
-				// last name may or may not be a folder name
-				name = path.substring(index + 1);
-				path = path.substring(0, index);
-			}
-		}
-		return new String[] { path, name };
+		return resolve(projectLocator.getURL(), projectFilePath, ref);
 	}
 
 	/**
 	 * Create a URL which refers to Ghidra Server repository content.  Path may correspond 
 	 * to either a file or folder.  
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain either the referenced {@link DomainFolder} or {@link DomainFile}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param host server host name/address
 	 * @param port optional server port (a value &lt;= 0 refers to the default port)
 	 * @param repositoryName repository name
-	 * @param repositoryPath absolute folder or file path within repository.
-	 * Folder paths should end with a '/' character.
+	 * @param repositoryPath absolute folder or file path within repository (may be null for root folder).
+	 *            Folder paths should end with a '/' character.
 	 * @return Ghidra Server repository content URL
 	 */
 	public static URL makeURL(String host, int port, String repositoryName, String repositoryPath) {
-		String[] splitName = splitOffName(repositoryPath);
-		return makeURL(host, port, repositoryName, splitName[0], splitName[1], null);
+		return makeURL(host, port, repositoryName, repositoryPath, null);
 	}
 
 	/**
 	 * Create a URL which refers to Ghidra Server repository content.  Path may correspond 
 	 * to either a file or folder.  
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain either the referenced {@link DomainFolder} or {@link DomainFile}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param host server host name/address
 	 * @param port optional server port (a value &lt;= 0 refers to the default port)
-	 * @param repositoryName repository name
-	 * @param repositoryPath absolute folder or file path within repository.
-	 * @param ref ref or null 
-	 * Folder paths should end with a '/' character.
+	 * @param repositoryName repository name (required)
+	 * @param repositoryPath absolute folder or file path within repository (may be null).
+	 *            Folder paths should end with a '/' character.
+	 * @param ref reference (may be null) 
 	 * @return Ghidra Server repository content URL
+	 * @throws IllegalArgumentException if arguments are specified which cannot be encoded into URL
 	 */
 	public static URL makeURL(String host, int port, String repositoryName, String repositoryPath,
 			String ref) {
-		String[] splitName = splitOffName(repositoryPath);
-		return makeURL(host, port, repositoryName, splitName[0], splitName[1], ref);
+		if (StringUtils.isBlank(host)) {
+			throw new IllegalArgumentException("host required");
+		}
+		if (StringUtils.isBlank(repositoryName)) {
+			throw new IllegalArgumentException("repository name required");
+		}
+		NamingUtilities.checkName(repositoryName, "Repository name");
+		if (port == 0 || port == GhidraServerHandle.DEFAULT_PORT) {
+			port = -1;
+		}
+		String path = "/" + repositoryName;
+		if (!StringUtils.isBlank(repositoryPath)) {
+			if (!repositoryPath.startsWith("/") || repositoryPath.indexOf('\\') >= 0) {
+				throw new IllegalArgumentException("Invalid repository path");
+			}
+			if (repositoryPath.length() != 1) {
+				String checkPath = repositoryPath.substring(1);
+				if (checkPath.endsWith("/")) {
+					checkPath = checkPath.substring(0, checkPath.length() - 1);
+				}
+				checkValidProjectPath(checkPath, 0);
+			}
+			path += repositoryPath;
+		}
+
+		try {
+			return new URI(PROTOCOL, null, host, port, path, null, encodeRefPlus(ref)).toURL();
+		}
+		catch (URISyntaxException | MalformedURLException e) {
+			throw new IllegalArgumentException(e);
+		}
 	}
 
 	/**
 	 * Create a URL which refers to Ghidra Server repository content.  Path may correspond 
-	 * to either a file or folder.  
+	 * to either a file or folder.  See {@link #makeURL(String, int, String, String, String)}
+	 * for a slightly simpler form when working with just a project folder or file pathname. 
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain either the referenced {@link DomainFolder} or {@link DomainFile}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder or file object.
+	 * 
 	 * @param host server host name/address
 	 * @param port optional server port (a value &lt;= 0 refers to the default port)
-	 * @param repositoryName repository name
-	 * @param repositoryFolderPath absolute folder path within repository. 
-	 * @param fileName name of a file or folder contained within the specified {@code repositoryFolderPath}
+	 * @param repositoryName repository name (required)
+	 * @param repositoryFolderPath absolute folder path within repository (required). 
+	 * @param childName name of a file or folder contained within the specified 
+	 * 			{@code repositoryFolderPath} (required)
 	 * @param ref optional URL ref or null
 	 * Folder paths should end with a '/' character.
 	 * @return Ghidra Server repository content URL
 	 * @throws IllegalArgumentException if required arguments are blank or invalid
 	 */
 	public static URL makeURL(String host, int port, String repositoryName,
-			String repositoryFolderPath, String fileName, String ref) {
-		if (StringUtils.isBlank(host)) {
-			throw new IllegalArgumentException("host required");
+			String repositoryFolderPath, String childName, String ref) {
+
+		Objects.requireNonNull(repositoryFolderPath, "Folder path required");
+		Objects.requireNonNull(childName, "Child name required");
+
+		String path = repositoryFolderPath;
+		if (!path.endsWith("/")) {
+			path += "/";
 		}
-		// TODO: Need to improve checks and use of URL encoding
-		if (host.indexOf('@') >= 0) { // prevent user info with hostname
-			throw new IllegalArgumentException("invalid host name");
-		}
-		if (StringUtils.isBlank(repositoryName)) {
-			throw new IllegalArgumentException("repository name required");
-		}
-		if (port == 0 || port == GhidraServerHandle.DEFAULT_PORT) {
-			port = -1;
-		}
-		String path = "/" + repositoryName;
-		if (!StringUtils.isBlank(repositoryFolderPath)) {
-			if (!repositoryFolderPath.startsWith("/") || repositoryFolderPath.indexOf('\\') >= 0) {
-				throw new IllegalArgumentException("Invalid repository path");
-			}
-			path += repositoryFolderPath;
-			if (!path.endsWith("/")) {
-				path += "/";
-			}
-		}
-		if (!StringUtils.isBlank(fileName)) {
-			if (fileName.contains("/")) {
-				throw new IllegalArgumentException("Invalid folder/file name: " + fileName);
-			}
-			if (!path.endsWith("/")) {
-				path += "/";
-			}
-			path += fileName;
-		}
-		if (!StringUtils.isBlank(ref)) {
-			path += "#" + ref;
-		}
-		try {
-			return new URL(PROTOCOL, host, port, path);
-		}
-		catch (MalformedURLException e) {
-			throw new IllegalArgumentException(e);
-		}
+		path += childName;
+
+		return makeURL(host, port, repositoryName, path, ref);
 	}
 
 	/**
-	 * Create a URL which refers to Ghidra Server repository and its root folder
+	 * Create a URL which refers to Ghidra Server named repository and its root folder.
+	 * <p>
+	 * Upon a successful URL connection, a {@link GhidraURLWrappedContent}
+	 * content object will be provided from which {@link GhidraURLWrappedContent#getContent(Object)}
+	 * may be invoked to obtain the repository's root {@link DomainFolder}.
+	 * <p>
+	 * NOTE: A proper {@link GhidraURLWrappedContent#release(Object, Object)} is mandatory after
+	 * retrieving the wrapped content folder.
+	 * 
 	 * @param host server host name/address
 	 * @param port optional server port (a value &lt;= 0 refers to the default port)
-	 * @param repositoryName repository name
+	 * @param repositoryName repository name (required)
 	 * @return Ghidra Server repository URL
 	 */
 	public static URL makeURL(String host, int port, String repositoryName) {
 		return makeURL(host, port, repositoryName, null);
+	}
+
+	/**
+	 * Create a URL which refers to Ghidra Server (i.e., no specific repository).
+	 * Upon successful connection, the returned content type will be a 
+	 * {@link RepositoryServerAdapter} instance.
+	 * 
+	 * @param host server host name/address
+	 * @param port optional server port (a value &lt;= 0 refers to the default port)
+	 * @return Ghidra Server URL
+	 */
+	public static URL makeURL(String host, int port) {
+		try {
+			return new URI(PROTOCOL, null, host, port, null, null, null).toURL();
+		}
+		catch (URISyntaxException | MalformedURLException e) {
+			throw new IllegalArgumentException(e);
+		}
 	}
 
 }
